<resources xmlns:android="http://schemas.android.com/tools" xmlns:app="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ceaser Plus</string>
    <string name="menu">Menu</string>

    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>
    <string name="action_news">News</string>
    <string name="action_Contact_Us">Contact Us</string>
    <string name="action_menu">Menu</string>

    <string name="action_d_about_us">About Us</string>
    <string name="action_d_mission">Mission And Vision</string>
    <string name="action_d_news">News</string>
    <string name="action_d_our_clinics">Our Clinics</string>
    <string name="action_d_my_diet">My Diet</string>
    <string name="action_d_user_profile">User Profile</string>
    <string name="action_d_media_gallery">Media Gallery</string>
    <string name="action_d_faq">Faq</string>
    <string name="action_d_search">Search</string>


    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>


    <string-array name="mMenuList">


    </string-array>
    <string name="title_activity_register_screen">registerScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyDRqre3ZwhZqPEx8raewOonMfXwfSD3Eg0
    </string>
    <string name="who_we_are">
        Who we are
        The definition of Vim is energy and enthusiasm, which is the name of our upcoming health clinic. We are cooperating with Dr. Abdullah Al-Mutawa the founder of Rijeemy to create the ideal health clinic for a great variety of lifestyles. We supply gourmet meals to fulfill our clients’ needs throughout their day, freshly made and delivered everyday of the week.

        Categories:

        -       Athletes

        -       Clinical

        -       Life Style
    </string>
    <string-array name="country_arrays">

        <item>Afghanistan</item>

        <item>Aland Islands</item>

        <item>Albania</item>

        <item>Algeria</item>

        <item>American Samoa</item>

        <item>Andorra</item>

        <item>Angola</item>

        <item>Anguilla</item>

        <item>Antarctica</item>

        <item>Antigua and Barbuda</item>

        <item>Argentina</item>

        <item>Armenia</item>

        <item>Aruba</item>

        <item>Australia</item>

        <item>Austria</item>

        <item>Azerbaijan</item>

        <item>Bahrain</item>

        <item>Bangladesh</item>

        <item>Barbados</item>

        <item>Belarus</item>

        <item>Belgium</item>

        <item>Belize</item>

        <item>Benin</item>

        <item>Bermuda</item>

        <item>Bhutan</item>

        <item>Bolivia</item>

        <item>Bosnia and Herzegovina</item>

        <item>Botswana</item>

        <item>Bouvet Island</item>

        <item>Brazil</item>

        <item>British Indian Ocean Territory</item>

        <item>British Virgin Islands</item>

        <item>Brunei</item>

        <item>Bulgaria</item>

        <item>Burkina Faso</item>

        <item>Burundi</item>

        <item>Cambodia</item>

        <item>Cameroon</item>

        <item>Canada</item>

        <item>Cape Verde</item>

        <item>Cayman Islands</item>

        <item>Central African Republic</item>

        <item>Chad</item>

        <item>Chile</item>

        <item>China</item>

        <item>Christmas Island</item>

        <item>Cocos (Keeling) Islands</item>

        <item>Colombia</item>

        <item>Comoros</item>

        <item>Congo</item>

        <item>Cook Islands</item>

        <item>Costa Rica</item>

        <item>Cote d\'Ivoire</item>

        <item>Croatia</item>

        <item>Cuba</item>

        <item>Cyprus</item>

        <item>Czech Republic</item>

        <item>Democratic Republic of the Congo</item>

        <item>Denmark</item>

        <item>Djibouti</item>

        <item>Dominica</item>

        <item>Dominican Republic</item>

        <item>East Timor</item>

        <item>Ecuador</item>

        <item>Egypt</item>

        <item>El Salvador</item>

        <item>Equatorial Guinea</item>

        <item>Eritrea</item>

        <item>Estonia</item>

        <item>Ethiopia</item>

        <item>Faeroe Islands</item>

        <item>Falkland Islands</item>

        <item>Fiji</item>

        <item>Finland</item>

        <item>Former Yugoslav Republic of Macedonia</item>

        <item>France</item>

        <item>French Guiana</item>

        <item>French Polynesia</item>

        <item>French Southern Territories</item>

        <item>Gabon</item>

        <item>Georgia</item>

        <item>Germany</item>

        <item>Ghana</item>

        <item>Gibraltar</item>

        <item>Greece</item>

        <item>Greenland</item>

        <item>Grenada</item>

        <item>Guadeloupe</item>

        <item>Guam</item>

        <item>Guatemala</item>

        <item>Guinea</item>

        <item>Guinea-Bissau</item>

        <item>Guyana</item>

        <item>Haiti</item>

        <item>Heard Island and McDonald Islands</item>

        <item>Honduras</item>

        <item>Hong Kong</item>

        <item>Hungary</item>

        <item>Iceland</item>

        <item>India</item>

        <item>Indonesia</item>

        <item>Iran</item>

        <item>Iraq</item>

        <item>Ireland</item>

        <item>Italy</item>

        <item>Jamaica</item>

        <item>Japan</item>

        <item>Jordan</item>

        <item>Kazakhstan</item>

        <item>Kenya</item>

        <item>Kiribati</item>

        <item>Kuwait</item>

        <item>Kyrgyzstan</item>

        <item>Laos</item>

        <item>Latvia</item>

        <item>Lebanon</item>

        <item>Lesotho</item>

        <item>Liberia</item>

        <item>Libya</item>

        <item>Liechtenstein</item>

        <item>Lithuania</item>

        <item>Luxembourg</item>

        <item>Macau</item>

        <item>Madagascar</item>

        <item>Malawi</item>

        <item>Malaysia</item>

        <item>Maldives</item>

        <item>Mali</item>

        <item>Malta</item>

        <item>Marshall Islands</item>

        <item>Martinique</item>

        <item>Mauritania</item>

        <item>Mauritius</item>

        <item>Mayotte</item>

        <item>Mexico</item>

        <item>Micronesia</item>

        <item>Moldova</item>

        <item>Monaco</item>

        <item>Mongolia</item>

        <item>Montserrat</item>

        <item>Morocco</item>

        <item>Mozambique</item>

        <item>Myanmar</item>

        <item>Namibia</item>

        <item>Nauru</item>

        <item>Nepal</item>

        <item>Netherlands</item>

        <item>Netherlands Antilles</item>

        <item>New Caledonia</item>

        <item>New Zealand</item>

        <item>Nicaragua</item>

        <item>Niger</item>

        <item>Nigeria</item>

        <item>Niue</item>

        <item>Norfolk Island</item>

        <item>North Korea</item>

        <item>Northern Marianas</item>

        <item>Norway</item>

        <item>Oman</item>

        <item>Pakistan</item>

        <item>Palau</item>

        <item>Panama</item>

        <item>Papua New Guinea</item>

        <item>Palestine</item>

        <item>Paraguay</item>

        <item>Peru</item>

        <item>Philippines</item>

        <item>Pitcairn Islands</item>

        <item>Poland</item>

        <item>Portugal</item>

        <item>Puerto Rico</item>

        <item>Qatar</item>

        <item>Reunion</item>

        <item>Romania</item>

        <item>Russia</item>

        <item>Rwanda</item>

        <item>Sqo Tome and Principe</item>

        <item>Saint Helena</item>

        <item>Saint Kitts and Nevis</item>

        <item>Saint Lucia</item>

        <item>Saint Pierre and Miquelon</item>

        <item>Saint Vincent and the Grenadines</item>

        <item>Samoa</item>

        <item>San Marino</item>

        <item>Saudi Arabia</item>

        <item>Senegal</item>

        <item>Seychelles</item>

        <item>Sierra Leone</item>

        <item>Singapore</item>

        <item>Slovakia</item>

        <item>Slovenia</item>

        <item>Solomon Islands</item>

        <item>Somalia</item>

        <item>South Africa</item>

        <item>South Georgia and the South Sandwich Islands</item>

        <item>South Korea</item>

        <item>Spain</item>

        <item>Sri Lanka</item>

        <item>Sudan</item>

        <item>Suriname</item>

        <item>Svalbard and Jan Mayen</item>

        <item>Swaziland</item>

        <item>Sweden</item>

        <item>Switzerland</item>

        <item>Syria</item>

        <item>Taiwan</item>

        <item>Tajikistan</item>

        <item>Tanzania</item>

        <item>Thailand</item>

        <item>The Bahamas</item>

        <item>The Gambia</item>

        <item>Togo</item>

        <item>Tokelau</item>

        <item>Tonga</item>

        <item>Trinidad and Tobago</item>

        <item>Tunisia</item>

        <item>Turkey</item>

        <item>Turkmenistan</item>

        <item>Turks and Caicos Islands</item>

        <item>Tuvalu</item>

        <item>Virgin Islands</item>

        <item>Uganda</item>

        <item>Ukraine</item>

        <item>United Arab Emirates</item>

        <item>United Kingdom</item>

        <item>United States</item>

        <item>United States Minor Outlying Islands</item>

        <item>Uruguay</item>

        <item>Uzbekistan</item>

        <item>Vanuatu</item>

        <item>Vatican City</item>

        <item>Venezuela</item>

        <item>Vietnam</item>

        <item>Wallis and Futuna</item>

        <item>Western Sahara</item>

        <item>Yemen</item>

        <item>Yugoslavia</item>

        <item>Zambia</item>

        <item>Zimbabwe</item>

    </string-array>

    <string name="title_activity_our_clinc__list_adapter">OurClinc_ListAdapter</string>
    <string name="mission">To provide a high end gourmet diet-plan.</string>
    <string name="vision">For Vim to become a regionally recognized household name as the top notch dietary clinic</string>

    <string-array name="days_table">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


</resources>
